# nbot-rs

./: .env.example  .gitmodules  Cargo.toml
src/: main.rs  request.rs
