[package]
edition = "2021"
name = "nbot-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
dotenv = "0.15"
nbot-twitter-rs = {path = "libs/nbot-twitter-rs"}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
